--- a/president.html
+++ b/president.html
@@ -2,13 +2,13 @@
 <html>
  <head>
      <title>
-    President guess by pavan kalyan bakkani
+    President page
     </title>
 </head>
 
-
 <body>
-
+<h2>    President guess by pavan kalyan bakkani
+</h2>
 
 <form>
     <label for="form1_age">What is your age </label>
