--- a/computer.html
+++ b/computer.html
@@ -9,15 +9,15 @@
 <h2>pavan kalyan bakkani orders a computer</h2>
 <form >
     <input type="checkbox" id="extraMemory" name="extraMemory"   
-      value="extra" checked>
+      value="extra" >
     <label for="extraMemory">Extra memory</label></br>
   
     <input type="checkbox" id="Mouse" name="Mouse" 
-       value="mouse" checked>
+       value="mouse" >
     <label for="Mouse">Mouse</label></br>
   
     <input type="checkbox" id="cellService" name="cellService"   
-       value="cell" checked>
+       value="cell" 
     <label for="cellService">Cell service</label></br>
 
     <input type="button" onclick="orderComputer()" value="Order a Computer">
