--- a/tips.html
+++ b/tips.html
@@ -1,7 +1,16 @@
 <!DOCTYPE html>
 <html>
+    <head>
     <title>Tips page</title>
- 
+    </head>
+    <style>
+        h2 {
+          background-color: rgb(188, 202, 212);
+          color: black;
+          display: inline-block;
+          font-family: 'Times New Roman', Times, serif;
+      }
+      </style>
 <body>
 
 <h2>pavan kalyan bakkani computes Tips</h2>
@@ -13,7 +22,7 @@
     <label for="form_two"> Enter tip increase </label>
     <input type ="number" id="form_two" name="form_two" value=0.05> <br>
 
-    <input type="button" onclick="tips()" value="Find tips">
+    <input type="button" onclick="tips()" value="Find tips"  style="background-color: blue;>
 </form>
 
 
