--- a/president.html
+++ b/president.html
@@ -77,6 +77,11 @@ function checkGuess (){
         }
     }
 }
+function incorrectcheckGuess(){
+    alert("Sorry, game over.")
+    }
+    </script>
+    <br>
 </script>
 
 <div>
